# jyotishganit

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  publish.yml.disabled  test.yml
jyotishganit/: __init__.py  main.py
jyotishganit/components/: ashtakavarga.py  aspects.py  divisional_charts.py  houses.py  panchanga.py  strengths.py
jyotishganit/core/: astronomical.py  constants.py  models.py  utils.py
jyotishganit/dasha/: __init__.py  vimshottari.py
jyotishganit/output/: jsonld_formatter.py
tests/: conftest.py  test_ashtakavarga.py  test_birth_charts.py  test_dashas.py  test_divisional_charts.py  test_manual_calc_verification.py  test_panchanga.py  test_strengths.py
